class-management-lecturer-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lecturer-service
spec:
  selector:
    app: class-management-lecturer-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: lecturer-service-mongodb
spec:
  selector:
    app: lecturer-service-mongodb
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
