class-management-lecturer-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lecturer-service-ingress
spec:
  rules:
  - host: lecturer-api.th1enlm02.live
    http:
      paths:
        - path: /lecturer
          pathType: Prefix
          backend:
            service:
              name: lecturer-service
              port:
                number: 5000
